--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "tailwind-editor": "^0.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
